--- a/packages/ag-charts-website/src/components/top-bar/TopBar.module.scss
+++ b/packages/ag-charts-website/src/components/top-bar/TopBar.module.scss
@@ -3,19 +3,17 @@
 .topBar {
     background-color: var(--toolbar-background);
 
-    #{$darkmode-selector} & {
-        border-bottom: 1px solid #394755;
-    }
-
     @media screen and (min-width: $breakpoint-docs-nav-medium) {
         position: sticky;
         top: $site-header-height;
         z-index: 3;
     }
 
+    border-bottom: 0.5px solid transparent;
+
     #{$darkmode-selector} & {
         background: #121f29;
-        border-bottom: 0.5px solid #394755;
+        border-bottom-color: #394755;
     }
 }
 
