--- a/packages/ag-charts-website/src/design-system/_base.scss
+++ b/packages/ag-charts-website/src/design-system/_base.scss
@@ -77,18 +77,4 @@ html {
         color: #3893f9;
         text-decoration-color: #60aafe;
     }
-
-    body::-webkit-scrollbar,
-    aside::-webkit-scrollbar,
-    .menu::-webkit-scrollbar {
-        background-color: var(--dark-bg-new);
-    }
-
-    body::-webkit-scrollbar-thumb,
-    aside::-webkit-scrollbar-thumb,
-    .menu::-webkit-scrollbar-thumb {
-        background-color: rgba(255, 255, 255, 0.1);
-        border-radius: 10px;
-        border: 4px solid var(--dark-bg-new);
-    }
 }
